# qt-personal

./: CMakeLists.txt  assets.qrc  main.cpp  main.qml
demo/: DemoRect.qml
src/Comm/: CustomStyle.qml  Theme.mjs
src/Layout/: Base.qml  Content.qml  ContentBody.qml  ContentMenu.qml  Footer.qml  Header.qml
src/Theme/: BaseTheme.qml
